changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Remove support for undefined translations 'nl', 'de', and 'it'. Removes
some error messages at startup.
Andreas Kirschbaum 2009-11-14

Remove 'explore' mode.
Andreas Kirschbaum 2009-11-14

Fix formatting of 'hiscore' command output.
Andreas Kirschbaum 2009-11-13

Omit objects below the floor from the ground view.
Andreas Kirschbaum 2009-10-29

Fix exit location for the goto command in server/c_wiz.c (was broken when exit
coordinates recently changed so that (-1,-1) meant default coordinates).
Arvid Norlander 2009-10-29

Disable [Debug] messages by default. Use the -d command-line option to
enable debug messages.
Andreas Kirschbaum 2009-10-25

Fix incorrect error message for throwing skill when no throwable object
was found.
Andreas Kirschbaum 2009-10-25

Fix checks for incorrect/missing parameters of 'abil' command.
Andreas Kirschbaum 2009-10-25

Adapt regression test to changed spell parameters (r12127).
Andreas Kirschbaum 2009-10-24

Fix #2879249 (SIGSEGV on transport moving across some edges of tiled maps).
Andreas Kirschbaum 2009-10-23

Change exits pointing to new map's default coordinates from (0,0) to
(-1,-1). This allows exits to point to (0,0).
Andreas Kirschbaum 2009-10-23

The hiscore command requests 50 high scores, but for some reason the command
that outputs the scores arbitrarily returns only 49.  Removed a needless
decrement of the max parameter.  Now the command returns 50.
Kevin Bulgrien 2009-08-31

Remove i18n strings and help files that used to support the output-sync and
output-count functionality.
Kevin Bulgrien 2009-08-31
