@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Rewrite hiscore.c module. Now the highscore file is read once when the
+server is started and written whenever it changes. Adding new entries and
+generating output for the 'hiscore command do not anymore read the
+highscore file from disk.
+Andreas Kirschbaum 2009-11-15
+
 Remove support for undefined translations 'nl', 'de', and 'it'. Removes
 some error messages at startup.
 Andreas Kirschbaum 2009-11-14
